--- a/docs/gwy/gn/公安重点内容.md
+++ b/docs/gwy/gn/公安重点内容.md
@@ -16,6 +16,24 @@
 
 
 
+### 中国特色社会主义
+
+---
+
+#### 社会主义法治理念
+
+- 内容：**依法治国、执法为民、公平正义、服务大局、党的领导**（一支功夫党、核本驾驶证）
+
+#### 全面依法治国
+
+- 意义：坚持和发展中国特色社会主义的**本质要求和重要保障**
+
+- **三依法**：依法治国、依法执政、依法行政
+- **三法治**：法治国家、法治政府、法治社会
+- **基本格局：科学立法（前提）、严格执法（关键）、公正司法（防线）、全民守法（基础）**
+
+
+
 ### 行政执法依据
 
 ---
@@ -62,6 +80,10 @@
   - 依法应当适用听证程序
   - 可能作出**10日以上行政拘留**处罚的
 - 快速办理期限：违法嫌疑人**到案后48小时内**作出决定
+- **相关程序**：
+  1. **书面告知**违法嫌疑人快速办理相关规定，征得同意并**签名确认**
+  2. 由**专兼职法制员**或**办案部门负责人审核**
+  3. 然后报**公安机关负责人审批**
 
 #### 听证程序
 
@@ -88,6 +110,55 @@
   - 16≤年龄<18，初次违反治安管理或其他公安行政管理
   - 年龄≥70
   - 怀孕或哺乳自己不满1周岁婴儿的
+
+#### 调查取证
+
+- 一般规定
+  - 民警**不得少于2人**：询问、辨认、检查、勘验、实施行政强制措施
+  - 1名民警带领**1名辅警**：接报案、受案登记、接受证据、信息采集、调解、送达文书，全程应录音录像
+- **询问**
+  - **传唤**的方式
+    - **传唤证**传唤：违法嫌疑人应在传唤证写明**到离案时间并签名**，拒绝的由民警在传唤证上注明
+    - **口头**传唤：对于**现场发现**的，出示**人民警察证**，在询问笔录中注明到案经过和到离案时间
+    - **强制**传唤：无正当理由不接受传唤的，可以使用**手铐、警绳等约束性警械**
+  - 时间
+    - 不得超过**8小时**，可能适用行政**拘留**的**不得超过24小时**（8/24）
+
+
+
+### 刑事执法基础
+
+---
+
+#### 刑罚的适用
+
+- 累犯
+
+  - 一般累犯
+    - 实质条件：前后两罪都是**故意**犯罪
+    - 刑度条件：前罪被判有期徒刑以上，后罪应当被判有期徒刑以上刑罚
+    - 时间条件：前罪执行完**5年内**（指主刑执行完毕）
+
+  - 特别累犯
+    - 实质条件：前后两罪都是**危害国家安全、恐怖活动、黑社会性质组织犯罪**
+    - 时间条件：后罪发生在前罪刑罚执行完毕的**任何时间**
+
+- 缓刑
+
+  - 条件：被判处**拘役、3年以下有期徒刑**
+  - 考验期：
+    - **拘役**：原判刑期以上1年以下，**不少于2个月**
+    - **有期徒刑**：原判刑期以上5年以下，**不少于1年**
+
+- 假释
+
+  - 条件：被判处**有期徒刑、无期徒刑**的犯罪分子
+  - 限制条件：
+    - 有期徒刑：执行**原判刑1/2以上**
+    - 无期徒刑：实际**执行13年以上**
+  - 禁止条件：
+    - 累犯
+    - **杀人、爆炸、抢劫、强奸、绑架**等**暴力**性犯罪中一罪被判处**10年以上有期徒刑、无期徒刑**
 
 
 
@@ -188,3 +259,7 @@
   - 一般12小时：**派出所负责人**批准
   - 延长至24小时：县级以上公安机关**值班负责人**批准
   - 延长至48小时：县级以上公安机关**主管负责人**批准
+
+
+
+![3FC45680-ED14-4E93-91FA-B41B5E5BBC14_1_105_c](https://s2.loli.net/2024/03/11/eLcqHXIimbSWCwp.jpg)
