feat: 修改公安专业基础知识

--- a/docs/gwy/gn/公安重点内容.md
+++ b/docs/gwy/gn/公安重点内容.md
@@ -118,11 +118,16 @@
   - 1名民警带领**1名辅警**：接报案、受案登记、接受证据、信息采集、调解、送达文书，全程应录音录像
 - **询问**
   - **传唤**的方式
-    - **传唤证**传唤：违法嫌疑人应在传唤证写明**到离案时间并签名**，拒绝的由民警在传唤证上注明
+    - **传唤证**传唤：违法嫌疑人应在传唤证（**办案部门负责人批准**）写明**到离案时间并签名**，拒绝的由民警在传唤证上注明
     - **口头**传唤：对于**现场发现**的，出示**人民警察证**，在询问笔录中注明到案经过和到离案时间
     - **强制**传唤：无正当理由不接受传唤的，可以使用**手铐、警绳等约束性警械**
   - 时间
     - 不得超过**8小时**，可能适用行政**拘留**的**不得超过24小时**（8/24）
+- **检查**
+  - 对象：与违法行为有关的场所、物品、人身
+  - 原则：**2人2证**。出示**工作证件**和**县级以上公安机关开具的检查证明**
+  - 例外：2人1证。对确有必要立即进行检查的，经出示工作证件可以当场检查
+
 
 
 
@@ -159,6 +164,11 @@
   - 禁止条件：
     - 累犯
     - **杀人、爆炸、抢劫、强奸、绑架**等**暴力**性犯罪中一罪被判处**10年以上有期徒刑、无期徒刑**
+
+#### 回避
+
+- 行政案件：一般民警回避由**本级公安机关**决定，领导的回避由**上级公安机关**决定
+- 刑事案件：一般民警回避由**领导**决定，领导由组织决定（公安机关负责人由**检委会**决定）
 
 
 
@@ -251,6 +261,13 @@
   - 一切依靠群众（根本态度）
   - 从群众中来，到群众中去（基本方法）
 - **基本方针**：在党委领导下的专门机关与广大群众相结合
+- 五个坚持
+  - 坚持**新时代中国特色社会主义思想**为指导
+  - 坚持**总体国家安全观**
+  - 坚持以**人民为中心**的发展思想
+  - 坚持**稳中求进**的工作总基调
+  - 坚持**政治建警、改革强警、科技兴警、从严治警**
+
 
 #### 继续盘问
 
